--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <main>
         <div class=top1><h1><b>Tic Tac Toe</h1></div>
+            <div class="mode-selector">
+  <button id="mode-ai">Play vs AI</button>
+  <button id="mode-multiplayer">2 Player Mode</button>
+  <p id="turn-indicator">Turn: O</p>
+</div>
+
             <div class="scoreboard">
                 <p><strong>Score</strong></p>
                 <p>X: <span id="score-x">0</span></p>
